All issues Solved